--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,3 +4,6 @@ $Black: #040404;
 $Purple: #8E96EA;
 $Gray: #6E6E6E;
 $Light-Purple: #D7DAFC;
+$LightGray: #D2D2D2;
+$Stroke: #F4F4F4;
+$White: #FEFEFF;
